--- a/ShopApp/View/CartCell.xib
+++ b/ShopApp/View/CartCell.xib
@@ -9,26 +9,30 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CartCell" rowHeight="230" id="KGk-i7-Jjw" customClass="CartCell" customModule="ShopApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="549" height="230"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CartCell" rowHeight="98" id="KGk-i7-Jjw" customClass="CartCell" customModule="ShopApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="549" height="98"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="549" height="230"/>
+                <rect key="frame" x="0.0" y="0.0" width="549" height="98"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ProductName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C3q-m2-ocY">
-                        <rect key="frame" x="279.5" y="105" width="105.5" height="20.5"/>
+                        <rect key="frame" x="279.5" y="35" width="105.5" height="20.5"/>
                         <color key="backgroundColor" red="1" green="0.97916631759999995" blue="0.81595535850000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3ve-6s-qDU">
-                        <rect key="frame" x="10" y="20" width="254.5" height="190"/>
+                        <rect key="frame" x="10" y="20" width="100" height="50"/>
                         <color key="backgroundColor" red="0.96973482840000003" green="0.88027533840000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="50" id="rZP-ja-1p9"/>
+                            <constraint firstAttribute="width" constant="100" id="yHp-pH-Buc"/>
+                        </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ProductPrice" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q2f-IJ-jKh">
-                        <rect key="frame" x="415" y="31" width="99" height="168"/>
+                        <rect key="frame" x="415" y="31" width="99" height="28"/>
                         <color key="backgroundColor" red="0.7705501441" green="1" blue="0.79025946459999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -36,7 +40,6 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="C3q-m2-ocY" firstAttribute="leading" secondItem="3ve-6s-qDU" secondAttribute="trailing" constant="15" id="53I-6g-xn4"/>
                     <constraint firstItem="Q2f-IJ-jKh" firstAttribute="leading" secondItem="C3q-m2-ocY" secondAttribute="trailing" constant="30" id="Bcc-z7-YHK"/>
                     <constraint firstItem="3ve-6s-qDU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="BwJ-kJ-2hC"/>
                     <constraint firstAttribute="bottomMargin" secondItem="Q2f-IJ-jKh" secondAttribute="bottom" constant="20" id="Jly-7X-Bf0"/>
@@ -55,7 +58,7 @@
                 <outlet property="productName" destination="C3q-m2-ocY" id="RYf-We-idy"/>
                 <outlet property="productPrice" destination="Q2f-IJ-jKh" id="haO-4L-tIS"/>
             </connections>
-            <point key="canvasLocation" x="303.62318840579712" y="137.27678571428569"/>
+            <point key="canvasLocation" x="303.62318840579712" y="92.410714285714278"/>
         </tableViewCell>
     </objects>
 </document>
